--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <h3>new code change</h3>
     <p> i am coding and coding and codnig</p>
     <p> more paragraph</p>
+    <img src="basic-image.png.png" alt="">
 </body>
 </html>
