--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <h3>new code change</h3>
     <p> i am coding and coding and codnig</p>
     <p> more paragraph</p>
+    <div>
+        <h3> new blog</h3>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt aut sapiente, ab veniam vero eaque id voluptate necessitatibus culpa eligendi dignissimos sit commodi magni molestiae aliquam sunt amet. Incidunt deserunt quam atque laudantium aliquam qui blanditiis at placeat necessitatibus illossssssss
+
+        </p>
+    </div>
     <img src="basic-image.png.png" alt="">
 </body>
 </html>
